Add contracts folder

--- a/LibraNET.Services.Data/LibraNET.Services.Data.csproj
+++ b/LibraNET.Services.Data/LibraNET.Services.Data.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\LibraNET.Services.Mapping\LibraNET.Services.Mapping.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
+
 </Project>
