--- a/LibraNET/LibraNET.csproj
+++ b/LibraNET/LibraNET.csproj
@@ -58,4 +58,9 @@
     <ProjectReference Include="..\LibraNET.Services.Data\LibraNET.Services.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\Authors\" />
+    <Folder Include="wwwroot\Images\Books\" />
+  </ItemGroup>
+
 </Project>
