Change home view

--- a/LibraNET.Services.Mapping/LibraNET.Services.Mapping.csproj
+++ b/LibraNET.Services.Mapping/LibraNET.Services.Mapping.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraNET.Data.Models\LibraNET.Data.Models.csproj" />
     <ProjectReference Include="..\LibraNET.Web.ViewModels\LibraNET.Web.ViewModels.csproj" />
   </ItemGroup>
 
