Add all books page

--- a/LibraNET.Services.Data/LibraNET.Services.Data.csproj
+++ b/LibraNET.Services.Data/LibraNET.Services.Data.csproj
@@ -8,11 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LibraNET.Data\LibraNET.Data.csproj" />
+    <ProjectReference Include="..\LibraNET.Services.Data.Models\LibraNET.Services.Data.Models.csproj" />
     <ProjectReference Include="..\LibraNET.Services.Mapping\LibraNET.Services.Mapping.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contracts\" />
   </ItemGroup>
 
 </Project>
