--- a/LibraNET.Services.Data.Models/LibraNET.Services.Data.Models.csproj
+++ b/LibraNET.Services.Data.Models/LibraNET.Services.Data.Models.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraNET.Common\LibraNET.Common.csproj" />
+    <ProjectReference Include="..\LibraNET.Web.ViewModels\LibraNET.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
