--- a/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
+++ b/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibraNET.Common\LibraNET.Common.csproj" />
   </ItemGroup>
 
