--- a/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
+++ b/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     <PackageReference Include="X.PagedList" Version="8.4.7" />
   </ItemGroup>
 
