Implement admin panel

--- a/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
+++ b/LibraNET.Web.ViewModels/LibraNET.Web.ViewModels.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraNET.Common\LibraNET.Common.csproj" />
+    <ProjectReference Include="..\LibraNET.Data.Models\LibraNET.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
