--- a/LibraNET.Data/LibraNET.Data.csproj
+++ b/LibraNET.Data/LibraNET.Data.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\LibraNET.Data.Models\LibraNET.Data.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
