--- a/LibraNET/appsettings.Development.json
+++ b/LibraNET/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=LibraNET;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Identity": {
     "SignIn": {
       "RequireConfirmedAccount": false
