--- a/LibraNET/appsettings.Development.json
+++ b/LibraNET/appsettings.Development.json
@@ -10,7 +10,8 @@
       "RequireLowercase": false,
       "RequireUppercase": false,
       "RequireNonAlphanumeric": false,
-      "RequiredLength": 8
+      "RequiredLength": 8,
+      "RequireDigit": true
     }
   }
 }
