--- a/LibraNET/appsettings.Development.json
+++ b/LibraNET/appsettings.Development.json
@@ -11,7 +11,7 @@
       "RequireUppercase": false,
       "RequireNonAlphanumeric": false,
       "RequiredLength": 8,
-      "RequireDigit": true
+      "RequireDigit": false
     }
   }
 }
